<resources>
    <string name="app_name">TradeMaster</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="loginBy">Войти с помощью</string>
    <string name="login_label">E-mail или телефон</string>
    <!--Facebook-->
    <string name="facebook_app_id">576673807597500</string>
    <string name="fb_login_protocol_scheme">fb576673807597500</string>
    <string name="facebook_client_token">c9dda1a10225d704a65d839ed640d854</string>
    <string name="password_label">Пароль</string>
    <string name="registrationBtn">Регистрация</string>
    <string name="login_text">Логин</string>
    <string name="name">Имя</string>
    <string name="policy">Политика конфиденциальности</string>
    <string name="surname">Фамилия</string>
    <string name="email">E-mail</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="rePassword">Подтвердить пароль</string>

</resources>